docs: update changelog for adversarial review fixes
Lists all 5 critical, 6 high, 3 moderate findings fixed plus
hexagonal architecture violation resolutions.